
2017-08-11  Edward Hart <edward.dan.hart@gmail.com>

	* general: moved all register definitions to the words files.
	* general: added unimplemented registers as reserved words.

2017-08-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* default.conf: set entry-statement from "obsolete" to "ok"

2017-08-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* lax.conf-inc: odo-without-to and incorrect-conf-sec-order set to
	  "at least warning" instead of "ok"

2017-07-29  Edward Hart <edward.dan.hart@gmail.com>

	* bs2000-strict.conf: further corrections.

2017-07-26  Edward Hart <edward.dan.hart@gmail.com>

	* mf.words: updated to Visual COBOL 3.0.
	* bs2000-strict.conf: corrected using actual COBOL2000 manual.

2017-07-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: allow GnuCOBOL specific registers for lax dialect
	  configurations

2017-07-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* default.conf: set word-length to most unrestrictive value: 61

2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: added move-figurative-constant-to-numeric and
	  move-figurative-quote-to-numeric option

2017-07-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: added settings for registers. mnemonic names and
	  intrinsic functions
	* acu.conf: added (non-standard) mnemonic names for switches

2017-07-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: added constant-folding option
	* general: renamed acucobol-literals option to acu-literals

2017-07-02  Ron Norman <rjn@inglenet.com>

	* mf.conf: corrected to have synchronized-clause: ignore

2017-06-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: created a "strict" set of vendor dialect configurations,
	  made "normal" vendor dialect configurations lax by allowing *all*
	  words GnuCOBOL can handle *additional* to the not-implemented