@@ -197,7 +197,7 @@ constant-78:				ok
 program-prototypes:			ok
 reference-out-of-declaratives:		warning
 numeric-value-for-edited-item:		ok
-incorrect-conf-sec-order:		warning
+incorrect-conf-sec-order:		ok
 define-constant-directive:		archaic
 
 
