@@ -191,7 +191,7 @@ constant-78:				ok
 program-prototypes:			ok
 reference-out-of-declaratives:		warning  # not verified yet
 numeric-value-for-edited-item:		error
-incorrect-conf-sec-order:		error
+incorrect-conf-sec-order:		ok
 define-constant-directive:		unconformable
 
 
