@@ -1,4 +1,8 @@
 
+2017-09-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* Makefile.am: extra target for summary.log
+
 2017-08-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am: use $COBC defined in atlocal instead of "cobc";
