@@ -1,4 +1,9 @@
 
+2017-09-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* default.conf, mf-strict.conf: set incorrect-conf-sec-order
+	  from "error" to "ok"
+
 2017-08-11  Edward Hart <edward.dan.hart@gmail.com>
 
 	* general: moved all register definitions to the words files.
